--- a/index.html
+++ b/index.html
@@ -1,11 +1,27 @@
+<!doctype html>
+<html>
+<head>
+  <meta charset="utf-8">
+  <link rel="manifest" href="./vaikhanasa/manifest.json">
+  <title>Sample1</title>
+  <base href="/">
+<!-- for apple -->
+<meta name="apple-mobile-web-app-capable" content="yes">
+<meta name="apple-mobile-web-app-status-bar-style" content="black">
+<meta name="apple-mobile-web-app-title" content="SamplePWA">
+	<!-- for windows -->
+<meta name="msapplication-TileColor" content="#2F3BA2">
 
-    <meta charset="utf-8" /> 
-    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
-    <meta name="theme-color" content="#f8f9fa"/>
-    <link rel="manifest" href="manifest.json"/>
-<meta name="mobile-web-app-capable" content="yes" />
-<meta name="apple-mobile-web-app-capable" content="yes" />
+  
+  <meta name="viewport" content="width=device-width, initial-scale=1">
 
+  
+</head>
+<body>
+  First PWA App
+  
+    </body>
+</html>
+    
 
-<div id="root"></div>
 
