--- a/index.html
+++ b/index.html
@@ -41,18 +41,11 @@
 		
 				window.addEventListener('beforeinstallprompt', function(e) {
 				  //console.log('beforeinstallprompt Event fired');
-				  //e.preventDefault();
+				  e.preventDefault();
 				  // Stash the event so it can be triggered later.
-				 // deferredPrompt = e;
+				  deferredPrompt = e;
 				  //return false;
-				   e.userChoice.then(function(choiceResult) {
-				    console.log(choiceResult.outcome);
-				    if(choiceResult.outcome == 'dismissed') {
-				      console.log('User cancelled home screen install');
-				    }
-				    else {
-				      console.log('User added to home screen');
-				    }
+				   btnAdd.style.display = 'block';
 				  });
 				});
 		
