--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
 			 
 		 }
 		
-		
+		let deferredPrompt;
 				window.addEventListener('beforeinstallprompt', function(e) {
 				  //console.log('beforeinstallprompt Event fired');
 				  e.preventDefault();
