--- a/index.html
+++ b/index.html
@@ -14,7 +14,13 @@
 
   
   <meta name="viewport" content="width=device-width, initial-scale=1">
-
+  <style>
+	  body{
+	  background:'#f8f9fa';
+		  
+	  }
+	  
+	</style>
   
 </head>
 <body>
