--- a/index.html
+++ b/index.html
@@ -14,6 +14,12 @@
 
   
   <meta name="viewport" content="width=device-width, initial-scale=1">
+	
+<link rel="stylesheet" href="materialize.min.css">
+ <script src="materialize.min.js"></script>
+    
+	
+	
   <style>
 	  body{
 	  background:'#f8f9fa';
@@ -24,7 +30,26 @@
   
 </head>
 <body>
-  First PWA App
+  <div class="container">
+      
+	  <div class="row">
+    <div class="col s12 m6">
+      <div class="card blue-grey darken-1">
+        <div class="card-content white-text">
+          <span class="card-title">Card Title</span>
+          <p>I am a very simple card. I am good at containing small bits of information.
+          I am convenient because I require little markup to use effectively.</p>
+        </div>
+        <div class="card-action">
+          <a href="#">This is a link</a>
+          <a href="#">This is a link</a>
+        </div>
+      </div>
+    </div>
+  </div>
+	  
+	  
+  </div>
   
 	
 	
