--- a/index.html
+++ b/index.html
@@ -15,8 +15,8 @@
   
   <meta name="viewport" content="width=device-width, initial-scale=1">
 	
-<link rel="stylesheet" href="materialize.min.css">
- <script src="materialize.min.js"></script>
+<link rel="stylesheet" href="./vaikhanasa/materialize.min.css">
+ <script src="./vaikhanasa/materialize.min.js"></script>
     
 	
 	
